--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
